Added get connnected device number service

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ generate_dynamic_reconfigure_options(cfg/Astra.cfg cfg/UVCCamera.cfg)
 add_service_files(
   FILES
   GetSerial.srv
+  GetConnectedNumberOfDevices.srv
   GetDeviceType.srv
   GetIRGain.srv
   GetCameraInfo.srv
